fix: add task foot-line no longer jumps up and down

--- a/src/app/pages/add-task/add-task.scss
+++ b/src/app/pages/add-task/add-task.scss
@@ -52,6 +52,9 @@ p {
   flex-shrink: 0;
 }
 
+.ng-dirty,
+.ng-touched,
+.ng-valid,
 .ng-untouched,
 .ng-pristine,
 .ng-invalid {
